tests/baselines/reference/parserAutomaticSemicolonInsertion1.errors.txt
tests/cases/conformance/parser/ecmascript5/AutomaticSemicolonInsertion/parserAutomaticSemicolonInsertion1.ts(8,1): error TS2322: Type 'Object' is not assignable to type 'I'.
  Type 'Object' provides no match for the signature '(): void'
tests/cases/conformance/parser/ecmascript5/AutomaticSemicolonInsertion/parserAutomaticSemicolonInsertion1.ts(14,1): error TS2322: Type 'Object' is not assignable to type '() => void'.
  Type 'Object' provides no match for the signature '(): void'


==== tests/cases/conformance/parser/ecmascript5/AutomaticSemicolonInsertion/parserAutomaticSemicolonInsertion1.ts (2 errors) ====
    interface I {
        (): void;
    }
     
    var i: I;
    var o: Object;
    o = i;
    i = o;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'I'.
!!! error TS2322:   Type 'Object' provides no match for the signature '(): void'
     
    var a: {
        (): void
    }
    o = a;
    a = o;
    ~
!!! error TS2322: Type 'Object' is not assignable to type '() => void'.
!!! error TS2322:   Type 'Object' provides no match for the signature '(): void'
    